feat: crud employee & add from create workshop
